--- a/SimpleTunnelServices/Info.plist
+++ b/SimpleTunnelServices/Info.plist
@@ -22,5 +22,11 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Looking for local devices with tcp Bonjour services</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_tunnelserver._tcp</string>
+	</array>
 </dict>
 </plist>
